--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: ${project.name}
 description: {project.description}
 version: ${project.version}
-authors: [blockparole]
+authors: [nothub]
 main: not.hub.bscb.BSCB
 prefix: BSCB
 load: STARTUP
